# bangla-render

./: .gitignore  LICENSE  README.md  pyproject.toml
bangla_render/: __init__.py  backend.py  fonts.py  layout.py  mpl_support.py  renderer.py
examples/: bangla_render_intro.ipynb  bangla_render_kaggle_colab_demo.ipynb  before_confusion_matrix.py  before_heatmap.py  before_line_plot.py  demo_confusion_matrix.py  demo_line_plot.py  demo_seaborn_heatmap.py
tests/: indic_demo.py  test_suite.py
