[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bangla-render"
version = "0.2.0"
description = "Bengali text rendering for Matplotlib & Seaborn using Qt/HarfBuzz"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Mrinal Basak Shuvo" }
]

keywords = [
  "bangla",
  "bengali",
  "matplotlib",
  "seaborn",
  "unicode",
  "harfbuzz",
  "visualization"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "matplotlib>=3.5",
  "numpy>=1.21",
  "PySide6>=6.5",
]

[project.urls]
Homepage = "https://github.com/mbs57/bangla-render"
Source = "https://github.com/mbs57/bangla-render"
Issues = "https://github.com/mbs57/bangla-render/issues"